# Tremble

./: .clang-tidy  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  NOTICE.md  NOTICE.txt  build.py
include/Tremble/: source_root.hpp
include/Tremble/c_api/: test.hpp
include/Tremble/c_api/core/: engine.hpp
include/Tremble/c_api/error/: tremble_error.hpp
include/Tremble/core/: engine.hpp
include/Tremble/error/: exception.hpp
include/Tremble/io/: config.hpp  log.hpp  window.hpp
res/shaders/: frag.glsl  vert.glsl
resources/: engine.toml
src/: source_root.cpp
src/c_api/: test.cpp
src/c_api/core/: engine.cpp
src/c_api/src/: test.cpp
src/core/: engine.cpp  engine.hpp  main.cpp
src/io/: config.cpp  input_manager.cpp  input_manager.hpp  key_codes.hpp  window.cpp  window.hpp
src/physics/: phys_scene.cpp  phys_scene.hpp  phys_world.cpp  phys_world.hpp  util.hpp
src/rendering/: GLContext.cpp  GLContext.hpp  camera.cpp  camera.hpp  naive_renderer.cpp  naive_renderer.hpp  shader_program.cpp  shader_program.hpp
src/util/: log.cpp  log.hpp  vec.hpp
src/world/map/: map_file_parser.cpp  map_file_parser.hpp
tools/map_builder/: CMakeLists.txt
tools/map_builder/src/: file_parser.cpp  file_parser.hpp  geometry_constructor.cpp  geometry_constructor.hpp  main.cpp  math.hpp  math_util.cpp  math_util.hpp  serialization.cpp  serialization.hpp  types.hpp
tools/map_builder/src/lib/: file_parser.cpp  file_parser.hpp  geometry_constructor.cpp  geometry_constructor.hpp  lib_types.hpp  math.cpp  math.hpp  serialization.cpp  serialization.hpp
